Fix height on mobile devices

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -12,7 +12,7 @@
 }
 html,body,#root,.App {
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 p,li,a,button {
     font-family: 'Rubik', serif !important;
@@ -37,11 +37,12 @@ $bgWidth: 10000px;
 .App {
     // background-color: darkred;
     // background: linear-gradient(90deg, rgba(30,48,65,1) 0%, rgba(66,38,0,1) 24%, rgba(57,2,2,1) 51%, rgba(72,75,92,1) 74%, rgba(30,48,65,1) 100%);
+    background-image: radial-gradient(#d0d0d0 0.7px, #13171a 0.7px);
     background: linear-gradient(to right, #626C75 0%,#181D23 25%,#13171a 50%,#181D23 75%,#626C75 100%); 
     background-size: $bgWidth 100%;
     animation: bg 25s linear infinite ;
     display: flex;
-    overflow-y: hidden;
+    overflow: hidden;
     #side-bar {
         width: 20%;
         padding: 60px 20px;
@@ -60,7 +61,6 @@ $bgWidth: 10000px;
             cursor: pointer;
             position: absolute;
             width: 90%;
-            // top: 20px;
             .header {
                 font-family: 'Kanit', sans-serif;
                 line-height: 50px;
@@ -117,6 +117,7 @@ $bgWidth: 10000px;
             height: 100%;
             padding: 20px 50px;
             overflow-y: scroll;
+            overflow-x: hidden;
             #hero-list {
                 display: grid;
                 grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
@@ -130,7 +131,6 @@ $bgWidth: 10000px;
                     img {
                         height: auto;
                         width: 100%;
-                        // max-width: 100px;
                         object-fit: cover;
                         transform: scale(1.2);
                         transition: 0.3s ease-in-out;
@@ -138,10 +138,11 @@ $bgWidth: 10000px;
                     p {
                         position: absolute;
                         font-size: 100%;
-                        bottom: 0;
+                        bottom: 5px;
+                        left: 5px;
                         opacity: 0%;
                         line-height: 15px;
-                        transform: translateX(100%);
+                        transform: translateX(50%);
                     }
                     &:hover {
                         box-shadow: 0px 8px 8px black;
@@ -240,13 +241,12 @@ $bgWidth: 10000px;
             grid-area: nav;
             width: 100%;
             padding: 10px 30px;
-            gap: 5px;
             div {
-                height: 100%;
                 width: 100%;
                 font-size: .8rem;
-                position: relative;
-                top: 0;
+                .header {
+                    font-size: 2rem;
+                }
                 p { 
                     font-size: .8rem; 
                     line-height: 12px; 
@@ -276,19 +276,36 @@ $bgWidth: 10000px;
             box-shadow: none;
             backdrop-filter: blur(0);
             .categories {
-                height: 100%;
+                height: 85%;
                 width: 100%;
                 padding: 0;
                 mask: none;
                 div {
                     p {
-                        font-size: 1.3em;
+                        font-weight: bolder;
+                    }
+                    p, li {
+                        font-size: .8em;
                     }
                 }
             }
         }
     }
 }
+// @media only screen and (max-width: 360px) {
+//     .App {
+//         height: 100px !important;
+//     }
+//     #side-bar {
+//         height: 0 !important;
+//     }
+//     #main {
+//         height: 0 !important;
+//     }
+//     #category-bar {
+//         height: 0 !important;
+//     }
+// }
 
 .invisible {
     opacity: 100%;
